tests/auto/webchannel/tst_webchannel.h
@@ -1,6 +1,7 @@
 /****************************************************************************
 **
 ** Copyright (C) 2016 Klarälvdalens Datakonsult AB, a KDAB Group company, info@kdab.com, author Milian Wolff <milian.wolff@kdab.com>
+** Copyright (C) 2019 Menlo Systems GmbH, author Arno Rehn <a.rehn@menlosystems.com>
 ** Contact: https://www.qt.io/licensing/
 **
 ** This file is part of the QtWebChannel module of the Qt Toolkit.
@@ -92,6 +93,13 @@ public:
         Asdf
     };
 
+    enum TestFlag : quint16 {
+        FirstFlag = 0x1,
+        SecondFlag = 0x2
+    };
+    Q_DECLARE_FLAGS(TestFlags, TestFlag)
+    Q_FLAG(TestFlags)
+
     Foo foo() const {return Bar;}
     int asdf() const {return 42;}
     QString bar() const {return QString();}
@@ -159,6 +167,8 @@ public:
     TestObject *mReturnedObject;
     QString mProp;
 };
+
+Q_DECLARE_OPERATORS_FOR_FLAGS(TestObject::TestFlags)
 
 class BenchObject : public QObject
 {
@@ -303,6 +313,8 @@ private slots:
     void testWrapRegisteredObject();
     void testRemoveUnusedTransports();
     void testPassWrappedObjectBack();
+    void testWrapValues();
+    void testJsonToVariant();
     void testInfiniteRecursion();
     void testAsyncObject();
     void testDeletionDuringMethodInvocation_data();
@@ -329,5 +341,7 @@ private:
 };
 
 QT_END_NAMESPACE
+
+Q_DECLARE_METATYPE(TestObject::Foo)
 
 #endif // TST_WEBCHANNEL_H
